add third commit

--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ body {
  @media (max-width: 768px) {
      .firstsection {
          padding: 20px;
+         padding-top: 100px;
          text-align: center;
      }
  
